# revman_crewai

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
baseline_outputs/: baseline_email.txt  capture_info_20251109_154013.txt
data/input/: Historical_price_change_summary_report_vF.xlsx  TBS Price Change Summary Report - October 13th'25.xlsx
data/output/: TBS Price Change Summary Report - October 13th'25_formula.xlsx  historical_analysis_results.json  price_categories.json  price_change_email_2025-11-05.html  price_change_email_2025-11-05_metadata.json  price_change_email_2025-11-05_validation.json  price_change_email_2025-11-06.html  price_change_email_2025-11-06_metadata.json  price_change_email_2025-11-06_validation.json  price_change_email_2025-11-08.txt  price_change_email_2025-11-08_metadata.json  price_change_email_2025-11-09.txt  price_change_email_2025-11-09_metadata.json  price_change_email_2025-11-09_validation.json  price_change_email_2025-11-10.txt  price_change_email_2025-11-10_metadata.json  price_change_email_2025-11-11.txt  price_change_email_2025-11-11_metadata.json  price_change_email_2025-11-14.txt  price_change_email_2025-11-14_metadata.json  price_change_email_2025-11-16.txt  price_change_email_2025-11-16_metadata.json  price_change_email_2025-11-17.txt  price_change_email_2025-11-17_metadata.json  price_forecasts.json  pricing_anomalies.json
data/templates/: Email workflow_price changes.docx  Output format.docx  plan_md_template.md  (+3 more)
scripts/: capture_baseline.py  validate_outputs.py
(+18 files in other folders)
