[project]
name = "revman"
version = "0.1.0"
description = "revman using crewAI"
authors = [{ name = "Aaditya Singhal", email = "aaditya.singhal@anheuser-busch.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.4.1",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kickoff = "revman.main:kickoff"
run_crew = "revman.main:kickoff"
plot = "revman.main:plot"
run_with_trigger = "revman.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.hatch.metadata]
allow-direct-references = true
